--- a/UNIFORM.ipynb
+++ b/UNIFORM.ipynb
@@ -17,6 +17,32 @@
    "source": [
     "print(\"Это невероятно!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b49bfd02-2113-47ed-b6b2-5e55cc4ea8f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Нет,это наука!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Нет,это наука!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5850a5e5-c82d-4244-86e8-a29d467430d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
