--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -20,11 +20,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "6ad10102-dfc1-4333-82d7-06d8afcef1ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "я\n",
+      "есть\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"я\", \"есть\", sep = \"\\n\" )"
+   ]
   }
  ],
  "metadata": {
